[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/ui/touchcontrols.gd" type="Script" id=1]
[ext_resource path="res://sprites/buttons/B.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons/A.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons/Y.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons/LT.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons/LB.png" type="Texture" id=6]
[ext_resource path="res://sprites/buttons/X.png" type="Texture" id=7]
[ext_resource path="res://sprites/buttons/RB.png" type="Texture" id=8]
[ext_resource path="res://sprites/buttons/RT.png" type="Texture" id=9]
[ext_resource path="res://sprites/buttons/Select.png" type="Texture" id=10]
[ext_resource path="res://sprites/buttons/Start.png" type="Texture" id=11]
[ext_resource path="res://sprites/buttons/varrow.png" type="Texture" id=12]
[ext_resource path="res://sprites/buttons/harrow.png" type="Texture" id=13]

[node name="Touchcontrols" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="B" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 1142, 586 )
normal = ExtResource( 2 )

[node name="A" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 1007, 586 )
normal = ExtResource( 3 )

[node name="Y" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 1142, 479 )
normal = ExtResource( 4 )

[node name="X" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 1007, 479 )
normal = ExtResource( 7 )

[node name="R1" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 872, 501 )
normal = ExtResource( 8 )

[node name="R2" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 917, 573 )
normal = ExtResource( 9 )

[node name="L1" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 20, 372 )
normal = ExtResource( 6 )

[node name="L2" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 157, 334 )
normal = ExtResource( 5 )

[node name="Up" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 116, 438 )
normal = ExtResource( 12 )

[node name="Down" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 116, 582 )
normal = ExtResource( 12 )

[node name="Left" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 20, 534 )
normal = ExtResource( 13 )

[node name="Right" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 164, 534 )
normal = ExtResource( 13 )

[node name="Select" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 431, 526 )
normal = ExtResource( 10 )

[node name="Start" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 743, 526 )
normal = ExtResource( 11 )

[connection signal="pressed" from="CanvasLayer/B" to="." method="_on_B_pressed"]
[connection signal="released" from="CanvasLayer/B" to="." method="_on_B_released"]
[connection signal="pressed" from="CanvasLayer/A" to="." method="_on_A_pressed"]
[connection signal="released" from="CanvasLayer/A" to="." method="_on_A_released"]
[connection signal="pressed" from="CanvasLayer/R1" to="." method="_on_R1_pressed"]
[connection signal="released" from="CanvasLayer/R1" to="." method="_on_R1_released"]
[connection signal="pressed" from="CanvasLayer/R2" to="." method="_on_R2_pressed"]
[connection signal="released" from="CanvasLayer/R2" to="." method="_on_R2_released"]
[connection signal="pressed" from="CanvasLayer/Up" to="." method="_on_Up_pressed"]
[connection signal="released" from="CanvasLayer/Up" to="." method="_on_Up_released"]
[connection signal="pressed" from="CanvasLayer/Down" to="." method="_on_Down_pressed"]
[connection signal="released" from="CanvasLayer/Down" to="." method="_on_Down_released"]
[connection signal="pressed" from="CanvasLayer/Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="CanvasLayer/Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="CanvasLayer/Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="CanvasLayer/Right" to="." method="_on_Right_released"]
[connection signal="pressed" from="CanvasLayer/Select" to="." method="_on_Select_pressed"]
[connection signal="released" from="CanvasLayer/Select" to="." method="_on_Select_released"]
